<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        tools:context=".MainActivity">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <EditText
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/enter_text"
                    android:gravity="center_horizontal"
                    android:ems="10"
                    android:id="@+id/inputData"/>


            <TextView
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:text="@string/show_calculated_hash"
                    android:layout_marginLeft="15dp"
                    android:textSize="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/showHash"
            />


            <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                <LinearLayout android:layout_width="213dp"
                              android:gravity="center_horizontal"
                              android:orientation="vertical"
                              android:layout_height="wrap_content">
                    <Button android:layout_width="115dp"
                            android:gravity="center_horizontal"
                            android:id="@+id/nextSig"
                            android:backgroundTintMode="add"
                            android:backgroundTint="@color/green"
                            android:text="@string/calculate_signature"
                            android:background="@drawable/button_background"
                            android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout android:layout_width="199dp"
                              android:orientation="vertical"
                              android:gravity="center"
                              android:layout_height="wrap_content">
                    <Button android:layout_width="115dp"
                            android:id="@+id/calcHash"
                            android:text="@string/calculate_hash"
                            android:background="@drawable/button_background"
                            android:backgroundTint="@color/yellow"
                            android:backgroundTintMode="add"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>



        </LinearLayout>



    </ScrollView>


</LinearLayout>